# final-nn

./: README.md  pyproject.toml  requirements.txt  task2_autoencoder.ipynb  task3_classifier.ipynb
.github/workflows/: test.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
