[build-system]
requires = ["setuptools>=61.0", "wheel", "python_version >= '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "final-nn"
version = "0.1.0"
description = "A neural network implementation from (almost) scratch"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.0.1",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.5.2",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=4.0.1",
    "pytest-cov>=3.0.0",
]

[tool.setuptools]
packages = ["nn"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"